--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^5.0.2",
     "jwt-decode": "^4.0.0",
+    "ngrok": "^5.0.0-beta.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.3",
