--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "internet",
   "version": "0.1.0",
   "private": true,
+  "homepage": "/ComplaintPortal",
   "dependencies": {
     "@auth0/auth0-react": "^2.3.0",
     "@testing-library/jest-dom": "^5.17.0",
@@ -10,6 +11,7 @@
     "axios": "^1.8.4",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^5.0.2",
+    "ngrok": "^5.0.0-beta.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.3",
